# claude-airflow-etl

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
.specify/memory/: constitution.md
dags/config/examples/: simple_extract_load_v1.json
dags/config/schemas/: operator-parameters-schema.json
dags/examples/advanced/: __init__.py  demo_comprehensive_quality_v1.py  demo_event_driven_pipeline_v1.py  demo_failure_recovery_v1.py  demo_spark_multi_cluster_v1.py
dags/examples/beginner/: __init__.py  demo_data_quality_basics_v1.py  demo_notification_basics_v1.py  demo_scheduled_pipeline_v1.py  demo_simple_extract_load_v1.py
dags/factory/: __init__.py  config_validator.py  dag_builder.py  operator_registry.py
docker-airflow/airflow-option-four/: docker-compose.yaml
docker-airflow/airflow-option-two/: docker-compose.yaml
docker-airflow/airflow-option-two/airflow/: requirements.txt
docker-airflow/airflow-option-two/spark/: Dockerfile
docker/airflow/: Dockerfile  entrypoint.sh  fix_callback_type.sql
docker/spark/: Dockerfile.standalone  README.md  docker-compose.spark.yml
docker/warehouse/: Dockerfile
docs/: operator_guide.md  testing_in_docker.md
scripts/: validate_environment.sh
specs/001-build-a-full/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-full/checklists/: cross-cutting.md  requirements.md
specs/001-build-a-full/contracts/: dag-config-schema.json
src/hooks/: spark_hook.py  warehouse_hook.py
src/operators/notifications/: __init__.py  base_notification.py  email_operator.py  teams_operator.py  telegram_operator.py
src/operators/quality/: __init__.py  base_quality_operator.py  completeness_checker.py  freshness_checker.py  null_rate_checker.py  schema_validator.py  uniqueness_checker.py
src/operators/spark/: kubernetes_operator.py  (+2 more)
src/spark_apps/: sales_aggregation.py  word_count.py
src/utils/: config_loader.py  data_generator.py  great_expectations_helper.py  logger.py  notification_templates.py  retry_policies.py  timeout_handler.py
src/warehouse/: schema.sql  seed_data.sql
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_ci_workflow.py  test_dag_hotreload.py  test_dag_idempotency.py  test_dag_parsing.py  test_data_quality_execution.py  test_deployment_smoke.py  test_docker_environment.py  test_dynamic_dag_execution.py  test_environment_reset.py  test_example_dags.py  test_failure_handling.py  test_quality_detection.py  test_retry_behavior.py  test_spark_execution.py
(+30 files in other folders)
